kubernetes/argocd_cluster02/config/eurotrip2026/manifests/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: eurotrip2026
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: eurotrip2026
  template:
    metadata:
      labels:
        app: eurotrip2026
    spec:
      containers:
        - name: eurotrip2026
          image: docker.io/flaviorssilva/eurotrip2026:48a7ede
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
        - setWeight: 100
