kubernetes/argocd_cluster02/config/eurotrip2026/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eurotrip2026
spec:
  selector:
    app: eurotrip2026
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
